# juliagpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hello_webgpu.cpp  index.html  metal_layer_helper.h  metal_layer_helper.mm
cuda_prototype/: README.md  bitmap.cc  bitmap.h  cmd.sh  cuda_kernels.cu  cuda_kernels.h  flake.nix  main.cc  viewport.cc  viewport.h
presentation/: README.md  flake.nix  justfile  marp.md
src/: CMakeLists.txt  compute_shaders.cc  compute_shaders.cpp  compute_shaders.h  fractal_settings.h  input_handler.cc  input_handler.cpp  input_handler.h  main.cc  metal_layer_helper.h  metal_layer_helper.mm  webgpu_setup.cc  webgpu_setup.h
